objects/SBQQ__UsageRate__c.object
<CustomObject>
    <description>This object is under development.</description>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__LowerBound__c</fullName>
        <inlineHelpText>Lower bound of the usage range for this usage rate</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose a price book for this usage rate to reference</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Usage Rates</relationshipLabel>
        <relationshipName>UsageRates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceType__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Price__c</fullName>
        <inlineHelpText>Price for the active currency. Use this field in multi-currency orgs.</inlineHelpText>
        <label>Price</label>
        <precision>14</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpperBound__c</fullName>
        <inlineHelpText>Upper bound of the usage range for this usage rate</inlineHelpText>
        <label>Upper Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UsagePriceMethod__c</fullName>
        <label>Usage Price Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Included Quantity</fullName>
                </value>
                <value>
                    <fullName>Usage Floor Quantity (Minimum)</fullName>
                </value>
                <value>
                    <fullName>Usage Ceiling Quantity (Maximum)</fullName>
                </value>
                <value>
                    <fullName>Overage (per unit)</fullName>
                </value>
                <value>
                    <fullName>Period High Water Mark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UsageProcessingOrder__c</fullName>
        <inlineHelpText>Define a number for Salesforce Billing to use when ordering usage rates for processing</inlineHelpText>
        <label>Usage Processing Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UsageRateCard__c</fullName>
        <inlineHelpText>Parent usage rate card for this usage rate</inlineHelpText>
        <label>Usage Rate Card</label>
        <referenceTo>SBQQ__UsageRateCard__c</referenceTo>
        <relationshipLabel>Usage Rates</relationshipLabel>
        <relationshipName>UsageRates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Usage Rate (Reserved)</label>
    <nameField>
        <displayFormat>UR-{000}</displayFormat>
        <label>Usage Rate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Rates (Reserved)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>